<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/btnAddQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addQuestion"
            android:text="@string/add_question" />

        <Button
            android:id="@+id/btnListQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="listQuestions"
            android:text="@string/list_questions" />

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="play"
            android:text="@string/play" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>